CB-33719 Refactor SDX events zip endpoint to stream page-by-page
Refactor the datalake structured events zip download to avoid loading
all events into memory at once. Previously getDatalakeEventsZip loaded
every event into a List, then serialized the entire collection into
the zip output stream — causing OOM on environments with large event
histories.

Changes:
- Extract SdxEventsZipService that streams events page-by-page from
  the database directly into the JsonGenerator/ZipOutputStream,
  bounded by the configured maxSize limit
- Extract SdxEventsHelper with shared logic (datalake existence check,
  datalake lookup, CRN-to-cloudbreak-CRN resolution, notification
  event conversion) to eliminate duplication between the paged API
  and the zip endpoint
- Expose JsonUtil.getFactory() so the zip service reuses the centrally
  configured ObjectMapper's JsonFactory for consistent serialization
- Simplify SdxEventsService by removing the old non-paged
  getDatalakeAuditEvents method and delegating shared concerns to
  SdxEventsHelper
- Simplify SdxEventController by delegating zip response building to
  SdxEventsZipService
- Add unit tests for SdxEventsHelper and SdxEventsZipService
- Update existing tests to reflect the refactored structure